--- a/css/style.css
+++ b/css/style.css
@@ -98,7 +98,24 @@ body {
   }
 }
 
-.btn {}
+@keyframes moveInBottom {
+  0% {
+    opacity: 0;
+    transform: translateY(500px)
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0)
+  }
+}
+
+.btn {
+}
+
+.btn-animated-move-in{
+  animation: moveInBottom .5s ease-out .75s;
+  animation-fill-mode: backwards;
+}
 
 .btn:link,
 .btn:visited {
@@ -108,6 +125,7 @@ body {
   display: inline-block;
   border-radius: 100px;
   transition: all .2;
+  position: relative;
 }
 
 .btn:hover {
@@ -123,4 +141,23 @@ body {
 .btn-white {
   background-color: #fff;
   color: #777;
+}
+
+.btn:after {
+  content: '';
+  display: inline-block;
+  height: 100%;
+  width: 100%;
+  border-radius: 100px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  transition: all .4s;
+}
+
+.btn:hover::after {
+  transform: scale(1.5);
+  opacity: 0;
+  background-color: #fff;
 }
