init css style for rems

--- a/css/style.css
+++ b/css/style.css
@@ -11,13 +11,19 @@ Dark green: #28b485
   padding: 0;
 }
 
+html {
+  font-size: 62.5%; 
+  /* por padrão p browser vem com 16px, nos queremos colocar 10pc no default 
+  para faciliartar nossos cálculos, logo 10/16 = 0.625  */
+}
+
 body {
   font-family: 'lato', sans-serif;
   font-weight: 400;
-  font-size: 16px;
+  font-size: 1.6rem;
   line-height: 1.7;
   color: #777;
-  padding: 30px;
+  padding: 3rem;
 }
 
 .header {
@@ -30,12 +36,12 @@ body {
 
 .logo-box {
   position: absolute;
-  top: 40px;
-  left: 40px;
+  top: 4rem;
+  left: 4rem;
 }
 
 .logo {
-  height: 35px;
+  height: 3.5rem;
 }
 
 .text-box {
@@ -49,14 +55,14 @@ body {
 .heading-primary {
   color: #fff;
   text-transform: uppercase;
-  margin-bottom: 100px;
+  margin-bottom: 10rem;
 }
 
 .heading-primary-main {
   display: block;
-  font-size: 60px;
+  font-size: 6rem;
   font-weight: 400;
-  letter-spacing: 35px;
+  letter-spacing: 3.5rem;
   animation: moveInLeft 1s ease-out;
   backface-visibility: hidden;
   /* algumas vezes em animações o elemento da uma tremida p cima maluca */
@@ -64,19 +70,19 @@ body {
 
 .heading-primary-sub {
   display: block;
-  font-size: 20px;
+  font-size: 2rem;
   font-weight: 400;
-  letter-spacing: 17.4px;
+  letter-spacing: 1.75rem;
   animation: moveInRight 1s ease-out;
 }
 
 @keyframes moveInLeft {
   0% {
     opacity: 0;
-    transform: translate(-100px)
+    transform: translate(-10rem)
   }
   80% {
-    transform: translate(10px)
+    transform: translate(1rem)
   }
   100% {
     opacity: 1;
@@ -87,10 +93,10 @@ body {
 @keyframes moveInRight {
   0% {
     opacity: 0;
-    transform: translate(100px)
+    transform: translate(1rem)
   }
   80% {
-    transform: translate(-10px)
+    transform: translate(-1rem)
   }
   100% {
     opacity: 1;
@@ -101,7 +107,7 @@ body {
 @keyframes moveInBottom {
   0% {
     opacity: 0;
-    transform: translateY(500px)
+    transform: translateY(50rem)
   }
   100% {
     opacity: 1;
@@ -109,10 +115,9 @@ body {
   }
 }
 
-.btn {
-}
+.btn {}
 
-.btn-animated-move-in{
+.btn-animated-move-in {
   animation: moveInBottom .5s ease-out .75s;
   animation-fill-mode: backwards;
 }
@@ -121,21 +126,21 @@ body {
 .btn:visited {
   text-transform: uppercase;
   text-decoration: none;
-  padding: 10px 40px;
+  padding: 1rem 4rem;
   display: inline-block;
-  border-radius: 100px;
+  border-radius: 10rem;
   transition: all .2;
   position: relative;
 }
 
 .btn:hover {
-  transform: translateY(-3px);
-  box-shadow: 0 10px 20px rgba(0, 0, 0, .2);
+  transform: translateY(-.3rem);
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, .2);
 }
 
 .btn:active {
-  transform: translateY(-1px);
-  box-shadow: 0 10px 10px rgba(0, 0, 0, .2);
+  transform: translateY(-.1rem);
+  box-shadow: 0 1rem 1rem rgba(0, 0, 0, .2);
 }
 
 .btn-white {
@@ -148,7 +153,7 @@ body {
   display: inline-block;
   height: 100%;
   width: 100%;
-  border-radius: 100px;
+  border-radius: 10rem;
   position: absolute;
   top: 0;
   left: 0;
